--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,9 @@ h2 {
   .description {
     font-size: 20px;
   }
+  .list2{
+    padding-left: 0px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
