--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,16 @@ h2 {
   .list2{
     padding-left: 0px;
   }
+  h1{
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 62px;
+  }
+  content__info p{
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 30px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
